--- a/biblio/auth.html
+++ b/biblio/auth.html
@@ -9,21 +9,21 @@
     <title>Библио Апарте</title>
 </head>
 <body>
-    <header class="container">
-        <div class="header-box">
+    <header class="container"><div class="header-box">
             <div class="header_title">БиблиоАпарте</div>
+            <div class="menu"></div>
             <div class="search">
                 <form action="profile_search.html">
-                    <input type="text" placeholder="Поиск">
-                    <button type="submit"></button>
-                  </form>
+                <input type="text" placeholder="Поиск">
+            </form>
             </div>
             <a class="btn_auth" href="auth.html">Войти</a>
+            </div>
         </div>
        
     </header>
 
-    <main>
+    <main class="container">
         <div class="form-auth">
             <form action="" method="post" enctype="multipart/form-data">
                 <h1 class="title-form">Авторизация</h1>
@@ -40,7 +40,22 @@
     </main>
 
     <footer>
-
+        <div class="footer_main">
+            <div class="footer container">
+                <div class="footer_main_text">
+                    <div class="footer_main_text_title">БиблиоАпарте</div>
+                    <div class="footer_main_text_description">твоя карманная библиотека</div>
+                </div>
+                <div class="footer_main_contacts">
+                    <div class="footer_main_contacts_text">Контакты</div>
+                    <div class="footer_main_contacts_text">biblioAparte@yandex.ru</div>
+                </div>
+                <a href="index.html">
+                    <img class="footer_main_bthome" src="img/home page.png" alt="Домашняя страница">
+                </a> 
+            </div>
+            
+        </div>
     </footer>
 
 </body>
