--- a/biblio/index.html
+++ b/biblio/index.html
@@ -17,10 +17,9 @@
             <div class="search">
                 <form action="profile_search.html">
                     <input type="text" placeholder="Поиск">
-                    <button type="submit"></button>
                 </form>
             </div>
-            <a class="btn_auth" href="auth.html">Войти</a>
+            <a class="btn_auth" href="profile.html">Профиль</a>
         </div>
     </header>
 
