--- a/biblio/profile_collection_create.html
+++ b/biblio/profile_collection_create.html
@@ -15,7 +15,6 @@
             <div class="search">
                 <form action="profile_search.html">
                     <input type="text" placeholder="Поиск">
-                    <button type="submit"></button>
                 </form>
             </div>
             <a class="btn_auth" href="auth.html">Войти</a>
@@ -51,6 +50,24 @@
             </div>
         </div>
     </main>
+
+    <footer>
+        <div class="footer_main container">
+            <div class="footer">
+                <div class="footer_main_text">
+                    <div class="footer_main_text_title">БиблиоАпарте</div>
+                    <div class="footer_main_text_description">твоя карманная библиотека</div>
+                </div>
+                <div class="footer_main_contacts">
+                    <div class="footer_main_contacts_text">Контакты</div>
+                    <div class="footer_main_contacts_text">biblioAparte@yandex.ru</div>
+                </div>
+                <a href="index.html">
+                    <img class="footer_main_bthome" src="img/home page.png" alt="Домашняя страница">
+                </a> 
+            </div>
+        </div>
+    </footer>
     
 </body>
 </html>
