--- a/biblio/registr.html
+++ b/biblio/registr.html
@@ -15,7 +15,6 @@
             <div class="search">
                 <form action="profile_search.html">
                     <input type="text" placeholder="Поиск">
-                    <button type="submit"></button>
                   </form>
             </div>
             <a class="btn_auth" href="auth.html">Войти</a>
@@ -23,7 +22,7 @@
        
     </header>
 
-    <main>
+    <main class="container">
         <div class="form">
             <form action="" method="post" enctype="multipart/form-data">
                 <h1 class="title-form">Регистрация</h1>
@@ -56,7 +55,22 @@
     </main>
 
     <footer>
-
+        <div class="footer_main">
+            <div class="footer container">
+                <div class="footer_main_text">
+                    <div class="footer_main_text_title">БиблиоАпарте</div>
+                    <div class="footer_main_text_description">твоя карманная библиотека</div>
+                </div>
+                <div class="footer_main_contacts">
+                    <div class="footer_main_contacts_text">Контакты</div>
+                    <div class="footer_main_contacts_text">biblioAparte@yandex.ru</div>
+                </div>
+                <a href="index.html">
+                    <img class="footer_main_bthome" src="img/home page.png" alt="Домашняя страница">
+                </a> 
+            </div>
+            
+        </div>
     </footer>
 
 </body>
