--- a/biblio/book.html
+++ b/biblio/book.html
@@ -197,17 +197,17 @@
                     <img src="img/ava.png" alt="" class="book_comment_profile_ava">
                 </div>
                 <div class="book_comment_text">
-                    <div class="book_comment_text_nickname">dumplingg</div>
+                    <div class="book_comment_text_nickname">bookworm</div>
                     <div class="book_comment_text_area">Очень крутая книга!!</div>
                 </div>
             </div>
             <div class="book_commet">
                 <div class="book_comment_profile">
-                    <img src="img/ava.png" alt="" class="book_comment_profile_ava">
+                    <img src="img/manga.jpg" alt="" class="book_comment_profile_ava">
                 </div>
                 <div class="book_comment_text">
-                    <div class="book_comment_text_nickname">dumplingg</div>
-                    <div class="book_comment_text_area">Очень крутая книга!!</div>
+                    <div class="book_comment_text_nickname">mister567</div>
+                    <div class="book_comment_text_area">Не оторваться!!</div>
                 </div>
             </div>
             <div class="book_commet">
