--- a/biblio/profile_all_collections.html
+++ b/biblio/profile_all_collections.html
@@ -70,8 +70,8 @@
             </div>
             <div class="list_collection">
                 <a href="profile_collection.html">
-                    <img src="img/cover_coll1.png" alt="Обложка" class="list_book_img">
-                    <div class="list_book_name">Лучше, чем приём у психолога</div>
+                    <img src="img/manga.jpg" alt="Обложка" class="list_book_img">
+                    <div class="list_book_name">Манга</div>
                     <div class="buttons">
                         <a href="profile_collection_edit.html" class="btn-edit">Редактировать</a>
                         <button class="remove"> Удалить</button>
@@ -80,8 +80,8 @@
             </div>
             <div class="list_collection">
                 <a href="profile_collection.html">
-                    <img src="img/cover_coll1.png" alt="Обложка" class="list_book_img">
-                    <div class="list_book_name">Лучше, чем приём у психолога</div>
+                    <img src="img/bal.jpg" alt="Обложка" class="list_book_img">
+                    <div class="list_book_name">Что-то на классическом</div>
                     <div class="buttons">
                         <a href="profile_collection_edit.html" class="btn-edit">Редактировать</a>
                         <button class="remove"> Удалить</button>
@@ -90,8 +90,8 @@
             </div>
             <div class="list_collection">
                 <a href="profile_collection.html">
-                    <img src="img/cover_coll1.png" alt="Обложка" class="list_book_img">
-                    <div class="list_book_name">Лучше, чем приём у психолога</div>
+                    <img src="img/cloun.jpg" alt="Обложка" class="list_book_img">
+                    <div class="list_book_name">Если совсем скучно</div>
                     <div class="buttons">
                         <a href="profile_collection_edit.html" class="btn-edit">Редактировать</a>
                         <button class="remove"> Удалить</button>
@@ -100,8 +100,8 @@
             </div>
             <div class="list_collection">
                 <a href="profile_collection.html">
-                    <img src="img/cover_coll1.png" alt="Обложка" class="list_book_img">
-                    <div class="list_book_name">Лучше, чем приём у психолога</div>
+                    <img src="img/musor.jpg" alt="Обложка" class="list_book_img">
+                    <div class="list_book_name">Всё подряд</div>
                     <div class="buttons">
                         <a href="profile_collection_edit.html" class="btn-edit">Редактировать</a>
                         <button class="remove"> Удалить</button>
