--- a/biblio/auth.html
+++ b/biblio/auth.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="js/script.js" defer></script>
+    <script src="js/authorizationForm.js" defer></script>
+    <link rel="stylesheet" href="https://unpkg.com/sweetalert2@10.16.6/dist/sweetalert2.min.css">
+    <script src="https://unpkg.com/sweetalert2@10.16.6/dist/sweetalert2.all.min.js" defer></script>
     <title>Библио Апарте</title>
 </head>
 <body>
@@ -25,11 +28,11 @@
 
     <main class="container">
         <div class="form-auth">
-            <form action="" method="post" enctype="multipart/form-data">
+            <form action="" id="authorizationForm" method="post" enctype="multipart/form-data">
                 <h1 class="title-form">Авторизация</h1>
                     <div class="form-container-middle">
-                        <input type="email" name="email" placeholder="Введите E-mail" class="box" required>
-                        <input type="password" name="password" placeholder="Введите пароль" class="box" required>
+                        <input type="email" name="email" id="email" placeholder="Введите E-mail" class="box" required>
+                        <input type="password" name="password" id="password" placeholder="Введите пароль" class="box" required>
                     </div>
 
                 <input type="submit" value="Войти" class="btn-form">
