--- a/biblio/profile_collection.html
+++ b/biblio/profile_collection.html
@@ -141,6 +141,197 @@
             </div>
             <div class="list_book">
                 <a href="book.html">
+                <img src="img/happiness.png" alt="Обложка" class="list_book_img">
+                <div class="list_book_name">Сыворотка счастья</div>
+                <div class="list_book_author">Калинина Д.</div>
+                </a>
+                <div class="list_book_estimation">
+                    <div class="list_book_estimation_rating">
+                        <span class="active"></span>	
+                        <span class="active"></span>    
+                        <span></span>  
+                        <span></span>    
+                        <span></span>
+                    </div>
+                    <div class="list_book_estimation_like">
+                        <div class="heart"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="list_book">
+                <a href="book.html">
+                <img src="img/birds.png" alt="Обложка" class="list_book_img">
+                <div class="list_book_name">Саги огненных птиц</div>
+                <div class="list_book_author">Ёрм А.</div>
+                </a>
+                <div class="list_book_estimation">
+                    <div class="list_book_estimation_rating">
+                        <span class="active"></span>	
+                        <span class="active"></span>    
+                        <span class="active"></span>  
+                        <span></span>    
+                        <span></span>
+                    </div>
+                    <div class="list_book_estimation_like">
+                        <div class="heart"></div>
+                    </div>
+                </div>
+                
+            </div>
+            <div class="list_book">
+                <a href="book.html">
+                <img src="img/dragon.png" alt="Обложка" class="list_book_img">
+                <div class="list_book_name">Как убить дракона</div>
+                <div class="list_book_author">Стивенсон К.</div>
+                </a>
+                <div class="list_book_estimation">
+                    <div class="list_book_estimation_rating">
+                        <span class="active"></span>	
+                        <span class="active"></span>    
+                        <span class="active"></span>  
+                        <span></span>    
+                        <span></span>
+                    </div>
+                    <div class="list_book_estimation_like">
+                        <div class="heart"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="list_book">
+                <a href="book.html">
+                <img src="img/psih.png" alt="Обложка" class="list_book_img">
+                <div class="list_book_name">Психосоматика. Как распознать и обезвредить хронический стресс</div>
+                <div class="list_book_author">Кирмичи А.</div>
+                </a>
+                <div class="list_book_estimation">
+                    <div class="list_book_estimation_rating">
+                        <span class="active"></span>	
+                        <span class="active"></span>    
+                        <span class="active"></span>    
+                        <span class="active"></span>    
+                        <span></span>
+                    </div>
+                    <div class="list_book_estimation_like">
+                        <div class="heart"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="list_book">
+                <a href="book.html">
+                <img src="img/Architecture.png" alt="Обложка" class="list_book_img">
+                <div class="list_book_name">Архитектура</div>
+                <div class="list_book_author">Леонардо Д. В.</div>
+                </a>
+                <div class="list_book_estimation">
+                    <div class="list_book_estimation_rating">
+                        <span class="active"></span>	
+                        <span class="active"></span>    
+                        <span></span>  
+                        <span></span>    
+                        <span></span>
+                    </div>
+                    <div class="list_book_estimation_like">
+                        <div class="heart"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="list_book">
+                <a href="book.html">
+                <img src="img/Architecture.png" alt="Обложка" class="list_book_img">
+                <div class="list_book_name">Архитектура</div>
+                <div class="list_book_author">Леонардо Д. В.</div>
+                </a>
+                <div class="list_book_estimation">
+                    <div class="list_book_estimation_rating">
+                        <span class="active"></span>	
+                        <span class="active"></span>    
+                        <span></span>  
+                        <span></span>    
+                        <span></span>
+                    </div>
+                    <div class="list_book_estimation_like">
+                        <div class="heart"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="list_book">
+                <a href="book.html">
+                <img src="img/Architecture.png" alt="Обложка" class="list_book_img">
+                <div class="list_book_name">Архитектура</div>
+                <div class="list_book_author">Леонардо Д. В.</div>
+                </a>
+                <div class="list_book_estimation">
+                    <div class="list_book_estimation_rating">
+                        <span class="active"></span>	
+                        <span class="active"></span>    
+                        <span></span>  
+                        <span></span>    
+                        <span></span>
+                    </div>
+                    <div class="list_book_estimation_like">
+                        <div class="heart"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="list_book">
+                <a href="book.html">
+                <img src="img/Architecture.png" alt="Обложка" class="list_book_img">
+                <div class="list_book_name">Архитектура</div>
+                <div class="list_book_author">Леонардо Д. В.</div>
+                </a>
+                <div class="list_book_estimation">
+                    <div class="list_book_estimation_rating">
+                        <span class="active"></span>	
+                        <span class="active"></span>    
+                        <span></span>  
+                        <span></span>    
+                        <span></span>
+                    </div>
+                    <div class="list_book_estimation_like">
+                        <div class="heart"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="list_book">
+                <a href="book.html">
+                <img src="img/Architecture.png" alt="Обложка" class="list_book_img">
+                <div class="list_book_name">Архитектура</div>
+                <div class="list_book_author">Леонардо Д. В.</div>
+                </a>
+                <div class="list_book_estimation">
+                    <div class="list_book_estimation_rating">
+                        <span class="active"></span>	
+                        <span class="active"></span>    
+                        <span></span>  
+                        <span></span>    
+                        <span></span>
+                    </div>
+                    <div class="list_book_estimation_like">
+                        <div class="heart"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="list_book">
+                <a href="book.html">
+                <img src="img/Architecture.png" alt="Обложка" class="list_book_img">
+                <div class="list_book_name">Архитектура</div>
+                <div class="list_book_author">Леонардо Д. В.</div>
+                </a>
+                <div class="list_book_estimation">
+                    <div class="list_book_estimation_rating">
+                        <span class="active"></span>	
+                        <span class="active"></span>    
+                        <span></span>  
+                        <span></span>    
+                        <span></span>
+                    </div>
+                    <div class="list_book_estimation_like">
+                        <div class="heart"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="list_book">
+                <a href="book.html">
                 <img src="img/MasterMarg.png" alt="Обложка" class="list_book_img">
                 <div class="list_book_name">Мастер и Маргарита</div>
                 <div class="list_book_author">Булгаков М. А.</div>
