--- a/biblio/profile_collection_edit.html
+++ b/biblio/profile_collection_edit.html
@@ -17,7 +17,7 @@
                     <input type="text" placeholder="Поиск">
                 </form>
             </div>
-            <a class="btn_auth" href="auth.html">Войти</a>
+            <a class="btn_auth" href="auth.html">Профиль</a>
         </div>
     </header>
 
