--- a/biblio/profile_edit.html
+++ b/biblio/profile_edit.html
@@ -18,7 +18,7 @@
                     <button type="submit"></button>
                   </form>
             </div>
-            <a class="btn_auth" href="auth.html">Войти</a>
+            <a class="btn_auth" href="profile.html">Профиль</a>
         </div>
        
     </header>
