--- a/biblio/profile_review_full.html
+++ b/biblio/profile_review_full.html
@@ -16,7 +16,7 @@
                     <input type="text" placeholder="Поиск">
                 </form>
             </div>
-            <a class="btn_auth" href="profile.html">Войти</a>
+            <a class="btn_auth" href="profile.html">Профиль</a>
         </div>
     </header>
 
